# NYC_Taxi_Data

./: .gitignore  Readme.md  pyproject.toml
.github/workflows/: ci_cd.yml
SQL/: analysis.sql  create_table.sql  predict.sql
src/: data_pipeline.py
