[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-taxi-data-pipeline" 
version = "0.1.0"
description = "A pipeline for NYC taxi data: import, filter, and predict tip amounts."
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.1.3",
    "pyarrow>=20.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "scikit-learn>=1.3.0", 
    "numpy>=1.26.0",      
    "joblib>=1.3.0",       
    "python-dotenv>=1.0.0" 
]